--- a/index.html
+++ b/index.html
@@ -233,16 +233,15 @@
 
 
 
-
 <h1>My Pet- Juno</h1>
-<img src="images/Juno1.jpeg" alt="Juno, a small black dog with a curious expression" style="width:10%;">
+<img src="images/Juno1.jpg" alt="Juno, a small black dog with a curious expression" style="width:10%;">
 
 <section>
     <h2 class="header-title">Introduction</h2>
     <div class="header-content">
         <p>Juno is a small black dog with a curious and adventurous spirit. He has a glossy black coat that shines beautifully, reflecting his vibrant and energetic personality.</p>
         <p>He is known for his playful demeanor, always ready to embark on a new adventure, whether it's exploring the backyard or finding the perfect spot to bury his treasures. Juno has a loving nature, forming deep bonds with his family members and bringing joy to everyone he meets.</p>
-        <img src="images/Juno2.jpeg" alt="Juno playing in the backyard" style="width:6%;">
+        <img src="images/Juno2.jpg" alt="Juno playing in the backyard" style="width:6%;">
         <img src="images/Juno3.jpg" alt="Juno finding the perfect spot to bury his treasures" style="width:6%;">
     </div>
 </section>
